01 databases/05 postgres/posgress/v13/README.md
# Custom PostgreSQL Docker Image

## Overview

This project provides a customized Docker setup for PostgreSQL 13. It builds a Docker image based on `postgres:13-bullseye` and includes several useful extensions and Python packages to create a powerful and extended database environment. The entire setup is orchestrated using Docker Compose for easy deployment and management.

The key features of this custom image are:
- **PostgreSQL 13**: Built on a stable and widely used version of PostgreSQL.
- **PostGIS**: Adds support for geographic objects to the PostgreSQL object-relational database.
- **PL/Python Support**: Includes the `plpython3u` extension, allowing you to write PostgreSQL functions and stored procedures in Python.
- **Python `requests` library**: Pre-installed to allow your Python functions within PostgreSQL to make HTTP requests to external services.
- **MySQL Foreign Data Wrapper**: Contains `mysql_fdw` to connect to and query remote MySQL databases from within PostgreSQL.
- **Performance Monitoring**: The `pg_stat_statements` extension is included to track planning and execution statistics of all SQL statements executed.

## Prerequisites

Before you begin, ensure you have the following installed on your system:
- [Docker](https://docs.docker.com/get-docker/)
- [Docker Compose](https://docs.docker.com/compose/install/)

## How to Use

1.  **Clone the repository or download the files.**
    
2.  **Navigate to the project directory:**
    ```sh
    cd /path/to/your/project/folder
    ```
    
3.  **Build and start the container:**
    Use Docker Compose to build the custom image and run the PostgreSQL container in detached mode:
    ```sh
    docker-compose up --build -d
    ```
    
4.  **Connect to the database:**
    You can connect to the PostgreSQL database using any standard client (like `psql`, DBeaver, or pgAdmin) with the following credentials:
    -   **Host**: `localhost`
    -   **Port**: `5432`
    -   **Database Name**: `perseus`
    -   **User**: `perseus`
    -   **Password**: `7bPnWmNtzNF36c8J8yWN`
    
    Example connection using `psql`:
    ```sh
    psql -h localhost -p 5432 -U perseus -d perseus
    ```

5.  **Stopping the container:**
    To stop the container, run:
    ```sh
    docker-compose down
    ```

## Configuration

The configuration is managed through the `docker-compose.yaml` and `Dockerfile`.

### `docker-compose.yaml`

-   **Image Tag**: The built image is tagged as `wisrovi/postgres:v1`. You can change this in the `image` field.
-   **Credentials**: The `POSTGRES_USER`, `POSTGRES_PASSWORD`, and `POSTGRES_DB` are set under the `environment` section. It is highly recommended to change the default password for production environments, preferably using Docker secrets.
-   **Data Persistence**: The `perseus-db` named volume is used to persist the database data in `/var/lib/postgresql/data`. This ensures that your data is safe even if the container is removed.
-   **Resource Limits**: The service has resource reservations and limits defined under the `deploy` key to control its CPU and memory usage.
-   **Networking**: The container is attached to a custom bridge network named `perseus-net`.

### `Dockerfile`

-   **Base Image**: The image is based on `postgres:13-bullseye`.
-   **Extensions**: SQL files in the `/docker-entrypoint-initdb.d` directory are automatically executed when the container starts for the first time. This is used to create the `plpython3u`, `pg_stat_statements`, and `postgis` extensions.
-   **System Packages**: `apt-get` is used to install additional packages like `python3`, `postgis`, and `postgresql-13-mysql-fdw`.
-   **Python Packages**: `pip3` is used to install Python libraries. Currently, `requests` is installed. You can add more packages by modifying the `Dockerfile`.

## Verifying Extensions

Once the container is running, you can connect to the `perseus` database and verify that the extensions are enabled with the `\dx` command in `psql`.

```
perseus=# \dx
                                         List of installed extensions
          Name          | Version |   Schema   |                        Description
------------------------+---------+------------+------------------------------------------------------------
 mysql_fdw              | 2.9.1   | public     | Foreign data wrapper for MySQL
 pg_stat_statements     | 1.8     | public     | track planning and execution statistics of all SQL statements executed
 plpgsql                | 1.0     | pg_catalog | PL/pgSQL procedural language
 plpython3u             | 1.0     | pg_catalog | PL/Python3U untrusted procedural language
 postgis                | 3.0.1   | public     | PostGIS geometry, geography, and raster spatial types and functions
(5 rows)
```

---
*This documentation was generated by Gemini.*
